--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@wdio/cli": "^7.0.7",
-    "dotenv": "^8.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@wdio/cli": "^7.0.7",
     "@wdio/local-runner": "^7.0.4",
     "@wdio/mocha-framework": "^7.0.7",
     "@wdio/spec-reporter": "^7.0.7",
     "@wdio/sync": "^7.0.7",
     "chromedriver": "^88.0.0",
+    "dotenv": "^8.2.0",
     "wdio-chromedriver-service": "^7.0.0"
   }
 }
