--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@wdio/mocha-framework": "^7.0.7",
     "@wdio/spec-reporter": "^7.0.7",
     "@wdio/sync": "^7.0.7",
-    "chromedriver": "^88.0.0",
     "dotenv": "^8.2.0",
-    "wdio-chromedriver-service": "^7.0.0"
+    "wdio-lambdatest-service": "^1.0.2"
   }
 }
